alterações sobre a imagem

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
                 <div id="feedbacks">
                     <div class="feedback">
-                        <img src="src/images/Lula de julieta (1).png" class="feedback-avatar" alt="">
+                        <img src="src/images/Lula de julieta (1).png" class="feedback-avatar" alt="imagem meme do lule">
 
                         <div class="feedback-content">
                             <p>
@@ -273,7 +273,7 @@
                     </div>
 
                     <div class="feedback">
-                        <img src="src/images/eneas (1).png" class="feedback-avatar" alt="">
+                        <img src="src/images/eneas (1).png" class="feedback-avatar" alt="imagem meme do enéas">
 
                         <div class="feedback-content">
                             <p>
