coloquei um link para o botão instagram

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
 
-                <a href="">
+                <a href="https://www.instagram.com/alvaro._.sam/">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
